migrate to postgres

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -132,7 +132,7 @@ a {
 }
 
 button {
-  background-color: unset;
+  background-color: var(--background);
   color: var(--foreground);
   border: none;
   font-family: unset;
