--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -110,8 +110,8 @@
             body: JSON.stringify({username, password})
         }).then(res => res.json())
                 .then(data => {
-                    if (data.accessToken) {
-                        localStorage.setItem('accessToken', data.accessToken);
+                    if (data.accesstoken) {
+                        localStorage.setItem('accesstoken', data.accesstoken);
                         localStorage.setItem('userId', data.userId);
                         localStorage.setItem('userName', data.userName);
                         this.logs = bootSequence(data.userName);
