fix: test code length

--- a/views/problem.handlebars
+++ b/views/problem.handlebars
@@ -72,7 +72,7 @@
                                         <table style="margin-block: 8px" class="table-with-border">
                                             <tr>
                                                 <td style="padding-inline-end: 8px">Input</td>
-                                                <td x-text="truncate(result.input)"></td>
+                                                <td ><span x-text="truncate(result.input)"></span></td>
                                             </tr>
                                             <tr>
                                                 <td style="padding-inline-end: 8px">Desired output</td>
