--- a/public/styles/problem.css
+++ b/public/styles/problem.css
@@ -50,7 +50,7 @@ ul {
   list-style: none;
   display: grid;
   gap: 8px;
-  max-width: 405px;
+  max-width: 100%;
 
   li {
     position: relative;
@@ -99,7 +99,7 @@ td span {
   overflow: hidden;
   text-overflow: ellipsis;
   display: inline-block;
-  max-width: 30ch;
+  max-width: 50ch;
 }
 
 @media (max-width: 768px) {
@@ -110,5 +110,9 @@ td span {
   aside {
     position: static;
     top: auto;
+  }
+
+  td span {
+    max-width: 30ch;
   }
 }
