traducción de strings en vistas

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -37,7 +37,7 @@
           </span>
             </a>
         {{else}}
-            Aun no hay problemas disponibles, ¡vuelve mañana mejor!
+            Aún no hay problemas disponibles, ¡vuelve mañana mejor!
         {{/each}}
     </div>
 
@@ -51,7 +51,7 @@
                     <button @click="content = `{{this.content}}`; title = `{{this.date}}` ;"
                             style="width: fit-content">{{this.date}}</button>
                 {{ else }}
-                    Aun no hay nada aquí, ansias.
+                    Aún no hay nada aquí, ansias.
                 {{/each}}
             </div>
         </template>
