traducción adicional de strings en vistas

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -46,7 +46,7 @@
         <a href="/leaderboard">Leaderboard</a>
         <div class="login">
             <span x-text="getUserName()"></span>
-            <button onclick="logout()">logout</button>
+            <button onclick="logout()">salir</button>
         </div>
     </div>
 </nav>
