--- a/views/leaderboard.handlebars
+++ b/views/leaderboard.handlebars
@@ -17,9 +17,9 @@
         <thead>
         <tr>
             <th>#</th>
-            <th>Username</th>
-            <th>Submissions</th>
-            <th>Score</th>
+            <th>Usuario</th>
+            <th>Intentos</th>
+            <th>Puntos</th>
         </tr>
         </thead>
         {{#each leaderboard}}
